# aidex

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/aidex/: __init__.py  chunk.py  context.py  cost.py  diff.py  models.py  redact.py  tokens.py
src/aidex/agent/: __init__.py  registry.py  schemas.py
src/aidex/cli/: __init__.py  chunk.py  common.py  context_cmd.py  cost.py  diff.py  main.py  models_cmd.py  redact.py  tokens.py  tools_cmd.py  validate.py
src/aidex/data/: models.json
src/aidex/validate/: __init__.py  csv_module.py  json.py  jsonl.py
tests/: test_agent_registry.py  test_chunk.py  test_cli_smoke.py  test_context.py  test_cost.py  test_diff.py  test_models_override.py  test_redact.py  test_tokens.py  test_validate_csv.py  test_validate_json.py  test_validate_jsonl.py
